=== HEAD

* Add Sequel.version for getting the internal version of Sequel (pusewicz, jeremyevans)

=== 2.9.0 (2009-01-12)

* Add -L option to sequel command line tool to load all .rb files in the given directory (pkondzior, jeremyevans)

* Fix Dataset#destroy for model datasets that can't handle nested queries (jeremyevans)

* Improve the error messages in parts of Sequel::Model (jeremyevans, pusewicz)

* Much better support for Dataset#{union,except,intersect}, allowing chaining and respecting order (jeremyevans)

* Default to logging only WARNING level messages when connecting to PostgreSQL (jeremyevans)

* Fix add_foreign_key for MySQL (jeremyevans, aphyr)

* Correctly literalize BigDecimal NaN and (+-)Infinity values (#256) (jeremyevans)

* Make Sequel raise an Error if you attempt to subclass Sequel::Model before setting up a database connection (jeremyevans)

* Add Sequel::BeforeHookFailed exception to be raised when a record fails because a before hook fails (bougyman)

* Add Sequel::ValidationFailed exception to be raised when a record fails because a validation fails (bougyman)

* Make Database#schema raise an error if given a table that doesn't exist (jeremyevans) (#255)

* Make Model#inspect call Model#inspect_values private method for easier overloading (bougyman)

* Add methods to create and drop functions, triggers, and procedural languages on PostgreSQL (jeremyevans)

* Fix Dataset#count when using UNION, EXCEPT, or INTERSECT (jeremyevans)

* Make SQLite keep table's primary key information when dropping columns (jmhodges)

* Support dropping indicies on SQLite (jmhodges)

=== 2.8.0 (2008-12-05)

* Support drop column operations inside a transaction on sqlite (jeremyevans)

* Support literal strings with placeholders and subselects in prepared statements (jeremyevans)

* Have the connection pool remove disconnected connections when the adapter supports it (jeremyevans)

* Make Dataset#exists return a LiteralString (jeremyevans)
