@@ -8,6 +8,45 @@ module Sequel
     # Hooks that are only for internal use
     PRIVATE_HOOKS = [:before_update_values, :before_delete]
     
+    # This adds a new hook type. It will define both a class
+    # method that you can use to add hooks, as well as an instance method
+    # that you can use to call all hooks of that type.  The class method
+    # can be called with a symbol or a block or both.  If a block is given and
+    # and symbol is not, it adds the hook block to the hook type.  If a block
+    # and symbol are both given, it replaces the hook block associated with
+    # that symbol for a given hook type, or adds it if there is no hook block
+    # with that symbol for that hook type.  If no block is given, it assumes
+    # the symbol specifies an instance method to call and adds it to the hook
+    # type.
+    #
+    # If any hook block returns false, the instance method will return false
+    # immediately without running the rest of the hooks of that type.
+    #
+    # It is recommended that you always provide a symbol to this method,
+    # for descriptive purposes.  It's only necessary to do so when you 
+    # are using a system that reloads code.
+    # 
+    # All of Sequel's standard hook types are also implemented using this
+    # method.
+    #
+    # Example of usage:
+    #
+    #  class MyModel
+    #   define_hook :before_move_to
+    #   before_move_to(:check_move_allowed){|o| o.allow_move?}
+    #   def move_to(there)
+    #     return if before_move_to == false
+    #     # move MyModel object to there
+    #   end
+    #  end
+    def self.add_hook_type(*hooks)
+      hooks.each do |hook|
+        @hooks[hook] = []
+        instance_eval("def #{hook}(method = nil, &block); define_hook_instance_method(:#{hook}); add_hook(:#{hook}, method, &block) end")
+        class_eval("def #{hook}; end")
+      end
+    end
+
     # Returns true if there are any hook blocks for the given hook.
     def self.has_hooks?(hook)
       !@hooks[hook].empty?
@@ -36,34 +75,6 @@ module Sequel
       end
     end
 
-    # Method allows to define own hook method for model. It will define 2
-    # methods, ClassMethods#your_hook and InstanceMethods#your_hook. With
-    # ClassMethods#your_hook you are able to pass block that should be called
-    # when InstanceMethods#your_hook will be invoked.
-    # 
-    # If InstanceMethods#your_hook returns false method that's invoking your
-    # hook should be stoped. It's of course only internal standard, and if you
-    # really don't like this behaviour you are not forced to use this. But still
-    # it's highly recommended.
-    # 
-    # Example of usage:
-    #
-    #  class MyModel
-    #   define_hook :before_move_to
-    #   before_move_to { true # code that should be executed before move_to method }
-    #   def move_to
-    #     return if before_move_to
-    #     do_something # main move_to method code
-    #   end
-    #  end
-    def self.define_hook(*hooks)
-      hooks.each do |hook|
-        @hooks[hook] = []
-        instance_eval("def #{hook}(method = nil, &block); define_hook_instance_method(:#{hook}); add_hook(:#{hook}, method, &block) end")
-        class_eval("def #{hook}; end")
-      end
-    end
-
     # Define a hook instance method that calls the run_hooks instance method.
     def self.define_hook_instance_method(hook) #:nodoc:
       class_eval("def #{hook}; run_hooks(:#{hook}); end")
@@ -81,6 +92,6 @@ module Sequel
     
     # For performance reasons, we define empty hook instance methods, which are
     # overwritten with real hook instance methods whenever the hook class method is called.
-    define_hook(*(HOOKS + PRIVATE_HOOKS))
+    add_hook_type(*(HOOKS + PRIVATE_HOOKS))
   end
 end
